[feat] 알림 목록 조회 및 읽음 처리 API 구현 (#365)
* refactor: 알림 수신자를 User로 변경

* feat: 알림 목록 조회 API 추가

* feat: 알림 읽음 처리 API 추가
